--- a/crontab/master/main/webroot/index.html
+++ b/crontab/master/main/webroot/index.html
@@ -203,7 +203,8 @@
                 dataType: 'json',
                 data: {name: jobName},
                 complete: function() {
-                    window.location.reload()
+                    // window.location.reload()
+                    console.log(11)
                 }
             })
         })
